--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_custom"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -41,6 +41,8 @@
             android:windowSoftInputMode="adjustResize"
             android:exported="false" >
         </activity>
+
+        <activity android:name=".activities.ArticleCommentActivity"/>
 
 
 
