完成我的微博的查看

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
         </activity>
 
         <activity android:name=".activities.ArticleCommentActivity"/>
+        <activity android:name=".activities.WriteArticleActivity"/>
+        <activity android:name=".activities.MyArticleActivity"/>
 
 
 
