添加点击图片放大，发表评论成功

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name=".activities.ArticleCommentActivity"/>
         <activity android:name=".activities.WriteArticleActivity"/>
         <activity android:name=".activities.MyArticleActivity"/>
+        <activity android:name=".activities.PhotoViewActivity"/>
 
 
 
