--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile project(':pullToRefresh')
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.commit451:PhotoView:1.2.4'
 }
