--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity android:name=".activities.MyArticleActivity"/>
         <activity android:name=".activities.PhotoViewActivity"/>
         <activity android:name=".activities.MyAllCommentsAcitivity"/>
+        <activity android:name=".activities.ArticleActivity"/>
 
 
 
