添加我的评论中的view点击

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity android:name=".activities.PhotoViewActivity"/>
         <activity android:name=".activities.MyAllCommentsAcitivity"/>
         <activity android:name=".activities.ArticleActivity"/>
+        <activity android:name=".activities.WriteArticleCommentActivity"/>
 
 
 
